Fixed a bug where score was increasing way too much. Also made the 21st row at the top invisible.

--- a/css/game.css
+++ b/css/game.css
@@ -55,7 +55,7 @@ div.leftPane {
 }
 
 .scoreView {
-  padding-top: 100px;
+  padding-top: 80px;
 }
 
 .levelView {
